# steganofraphy

lr1/: 3931_Kuleshov_LR1.odt  data.txt  main.py  result.txt  unpacked_result.txt
lr2/: 3931_Kuleshov_LR2.odt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  get.sh  packer  psnr_tool  unpacker
lr2/data/: payload.txt
lr2/libs/dct/: Dct.hpp
lr2/src/: BMPContainer.cpp  Message.cpp  Settings.cpp  main.cpp
lr3/: 3931_Kuleshov_LR3.odt  BMPContainer.hpp  BMPContainerExtended.hpp  CMakeCache.txt  IContainer.hpp  Makefile  build.sh  cmake_install.cmake  get.sh  insert.sh  packer  psnr_tool  unpacker
lr3/convert/: res_1.txt
lr3/data/: psnr.txt
lr3/src/: BMPContainerExtended.cpp  PsnrTool.cpp
lr3z/: CMakeCache.txt  CMakeLists.txt  Makefile  Message.hpp  Settings.hpp  cmake_install.cmake  packer  psnr_tool  unpacker
lr3z/src/: BMPContainer.cpp  BMPContainerExtended.cpp  main.cpp
z_lr3/: main.py  psnr.txt
z_lr3/data/: payload.txt  unpacked_result.txt
